<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_send_to_cloud"
        android:icon="@drawable/operation_button_upload"
        android:title="@string/operation_send_to_cloud"
        android:showAsAction="always" />

    <item android:id="@+id/action_copy"
        android:icon="@drawable/operation_button_copy"
        android:title="@string/operation_copy"
        android:showAsAction="always" />
    <item android:id="@+id/action_move"
        android:icon="@drawable/operation_button_move"
        android:title="@string/operation_move" />

    <item android:id="@+id/action_delete"
        android:icon="@drawable/operation_button_delete"
        android:title="@string/operation_delete"
        android:showAsAction="always" />

    <item android:id="@+id/action_send"
        android:icon="@drawable/operation_button_send"
        android:title="@string/operation_send"
        android:showAsAction="always" />

    <item android:id="@+id/action_copy_path"
        android:title="@string/operation_copy_path" />
    <item android:id="@+id/action_detail"
        android:title="@string/operation_info"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_rename"
        android:title="@string/operation_rename"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_select_all"
        android:icon="@drawable/operation_button_selectall"
        android:title="@string/operation_selectall"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_cancel"
        android:icon="@drawable/operation_button_cancel"
        android:title="@string/operation_cancel"
        android:showAsAction="ifRoom" />
</menu>