<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/file_info_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogContentTextStyle" />
            <TextView
                android:id="@+id/information_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                style="@style/DialogInformationTextStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/file_info_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogContentTextStyle" />
            <TextView
                android:id="@+id/information_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogInformationTextStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/file_info_modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogContentTextStyle" />
            <TextView
                android:id="@+id/information_modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogInformationTextStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/file_info_canread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogContentTextStyle" />
            <TextView
                android:id="@+id/information_canread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogInformationTextStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/file_info_canwrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogContentTextStyle" />
            <TextView
                android:id="@+id/information_canwrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogInformationTextStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/file_info_ishidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogContentTextStyle" />
            <TextView
                android:id="@+id/information_ishidden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:layout_gravity="center_vertical"
                style="@style/DialogInformationTextStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>