<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_state"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            style="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/wifi_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/wifi_state"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:padding="5px"
            style="?android:attr/textAppearanceSmall"/>
        <ImageView
            android:id="@+id/wifi_state_image"
            android:src="@drawable/wifi_state4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:gravity="bottom">
        <TextView
            android:id="@+id/instruction_pre"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/instruction_pre"
            android:visibility="gone"
            style="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/instruction"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/instruction"
            style="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/ip_address"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ipaddress_bg"
            android:textStyle="bold"
            android:singleLine="true"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#ffffff" />

        <LinearLayout
            android:id="@+id/start_stop_button"
            android:layout_height="wrap_content"
            android:layout_width="180dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_bottom">
            <TextView
                android:id="@+id/start_stop_button_text"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:drawablePadding="5dp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
