<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_background"
    android:orientation="vertical" >

        <!-- search -->
    <include 
        layout="@layout/search_bar"/>

<!--     <include  -->
<!--         layout="@layout/cloud_file_user_info"/> -->

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/path_bg_color"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="@dimen/navigation_bar_padding_top"
        android:paddingBottom="@dimen/navigation_bar_padding_bottom">
        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <LinearLayout
                android:id="@+id/current_path_pane"
                android:background="@drawable/path_pane_bg"
                android:layout_width="fill_parent"
                android:maxWidth="300dip"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <LinearLayout
                    android:id="@+id/current_path_scroller"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/current_path_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="start"
                        android:paddingLeft="10dip"
                        android:singleLine="true"
                        style="@style/FilePathTextStyle" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/path_pane_arrow"
                    android:src="@drawable/arrow_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/path_pane_up_level"
            android:src="@drawable/path_up_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginLeft="5dip"
            android:visibility="invisible" />
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/load_file_list_progress"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:visibility="gone">
	        <ProgressBar
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
	        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/files_loading"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />
	    </LinearLayout>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/file_path_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/divider_horizontal_dark"
            android:dividerHeight="@dimen/file_list_divider_height"
            android:headerDividersEnabled="true"
            android:footerDividersEnabled="true" />

        <LinearLayout
            android:id="@+id/empty_view"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:visibility="gone">
            <ImageView
                android:src="@drawable/empty_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_file"
                android:singleLine="true"
                style="@style/FileListErrorPromptTextStyle" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/dropdown_navigation"
            android:overScrollMode="never"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dropdown"
            android:visibility="gone">
            <LinearLayout
                android:id="@+id/dropdown_navigation_list"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </ScrollView>

        <include layout="@layout/cloud_file_list_error_layout"/>

    </FrameLayout>
    
    <LinearLayout
        android:id="@+id/upload_operation_bar"
        android:visibility="gone"
        style="@style/BottomButtonBar">

        <Button
            android:id="@+id/button_upload_confirm"
            style="@style/BottomButton.Left"
            android:text="@string/operation_send_to_cloud" />

        <Button
            android:id="@+id/button_upload_cancel"
            style="@style/BottomButton.Right"
            android:text="@string/operation_cancel" />
    </LinearLayout>

    <com.ape.cloudfile.widget.BottomActionBar
        android:id="@+id/bottom_aciton_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_action_bar_height"
        android:layout_marginLeft="@dimen/bottom_action_bar_margin_left"
        android:layout_marginRight="@dimen/bottom_action_bar_margin_left"
        />
</LinearLayout>
